<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.dante.workcycle.ui.fragments.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.dante.workcycle.ui.fragments.CalendarFragment"
        android:label="@string/nav_calendar" />

    <fragment
        android:id="@+id/moreFragment"
        android:name="com.dante.workcycle.ui.fragments.MoreFragment"
        android:label="@string/nav_more">

        <action
            android:id="@+id/action_moreFragment_to_statisticsFragment"
            app:destination="@id/statisticsFragment" />

        <action
            android:id="@+id/action_moreFragment_to_whatsNewFragment"
            app:destination="@id/whatsNewFragment" />
    </fragment>

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.dante.workcycle.ui.fragments.StatisticsFragment"
        android:label="@string/statistics_title" />

    <fragment
        android:id="@+id/whatsNewFragment"
        android:name="com.dante.workcycle.ui.fragments.WhatsNewFragment"
        android:label="@string/whats_new_title" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.dante.workcycle.ui.fragments.SettingsFragment"
        android:label="@string/settings_title">

        <action
            android:id="@+id/action_settingsFragment_to_whatsNewFragment"
            app:destination="@id/whatsNewFragment" />
    </fragment>

    <fragment
        android:id="@+id/helpFragment"
        android:name="com.dante.workcycle.ui.fragments.HelpFragment"
        android:label="@string/help_title" />
</navigation>